# wasm-host

./: .gitignore  Cargo.toml  NOTICE.md  README.md
.github/workflows/: ci.yml
apps/web/: README.md  index.html  package.json
apps/web/e2e/: bash-coreutils-smoke.html  bash-coreutils-smoke.js  codex-model-response.sse  codex-model-response.txt  codex-version-smoke-runner.js  codex-version-smoke.html  codex-version-smoke.js  http-bridge-smoke.txt  terminal-shell.html  terminal-shell.js
apps/web/fixtures/: codex-browser-request-builder-core.js  codex-browser-request-builder-fixture.js  codex-version-smoke-core.js  codex-version-smoke-fixture.js  command-worker-entry-fixture.js  http-worker-entry-fixture.js  wasi-module-node-worker-entry.js  webc-metadata-fixture.js
apps/web/scripts/: check-architecture.js
apps/web/src/: app-server-session.js  app-server-transport.js  app-server-websocket.js  app-server.js  app.css  app.js  artifact-manifest.js  codex-browser.js  codex-terminal-shell.js  command-worker-entry.js  command-worker.js  http-worker-entry.js  http-worker.js  http.js  mcp.js  package-loader.js  package-source-ui.js  package-source.js  secrets.js  terminal-ui.js  terminal.js  wasi-module-worker-entry.js  wasi-module.js  webc-metadata.js  webc-wasix.js  workspace.js
apps/web/test/: app-server-session.test.js  app-server-transport.test.js  app-server-websocket.test.js  app-server.test.js  artifact-manifest.test.js  codex-browser.test.js  command-worker-entry.test.js  command-worker.test.js  http-worker-entry.test.js  http-worker.test.js  http.test.js  mcp.test.js  package-loader.test.js  package-source-ui.test.js  package-source.test.js  secrets.test.js  terminal-ui.test.js  terminal.test.js  wasi-module.test.js  workspace.test.js
bindings/: README.md
bindings/c/: README.md  wasm_host.h
bindings/go/: README.md  go.mod  wasmhost.go  wasmhost_test.go
bindings/python/: README.md  pyproject.toml
bindings/python/tests/: test_ffi.py
bindings/python/wasm_host/: __init__.py  _ffi.py
crates/wasm-host-c-api/: Cargo.toml
crates/wasm-host-c-api/src/: lib.rs
crates/wasm-host-core/: Cargo.toml
crates/wasm-host-core/src/: host_command.rs  http.rs  lib.rs
crates/wasm-host-core/tests/: conformance.rs
crates/wasm-host-fixtures/: Cargo.toml
crates/wasm-host-fixtures/src/: lib.rs  main.rs
crates/wasm-host-runner/: Cargo.toml
crates/wasm-host-runner/src/: main.rs
crates/wasm-host-runner/tests/: http_bridge.rs
docs/: bash-coreutils-webc-import-audit.md  codex-browser-runtime-contract.md  host-profile.md  repo-layout.md  roadmap.md
docs/handoffs/: issue-204-wasix-process-control.md  issue-206-stack-continuation-foundation.md  issue-209-fork-lifecycle.md  issue-211-copy-fork-child-exec.md  issue-212-bash-path-package-commands.md  issue-215-bash-coreutils-workspace-smoke.md  issue-217-wasix-tty-terminal-size.md  issue-219-bash-workspace-script-smoke.md  issue-220-command-substitution.md  issue-223-bash-pipeline-read-smoke.md  issue-225-bash-status-stderr-smoke.md  issue-226-wasmer-sdk-adapter-evaluation.md  issue-228-wasmer-sdk-browser-parity.md
scripts/: install_llvm_build_deps.sh
tests/bindings/: run.sh
tests/bindings/c/: abi_smoke.c
tests/conformance/: README.md  run.sh
tests/e2e/: README.md
tests/e2e/languages/: README.md  run.sh  test-validator.sh  validate_output.py
tests/e2e/languages/go/: smoke.go
tests/e2e/languages/python/: smoke.py
tests/fixtures/: run.sh
tests/runner/: run.sh
