[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "vertoos-wasm-host"
version = "0.1.0"
description = "Python bindings for the VertoOS wasm-host runtime."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "VertoOS" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Libraries",
]

[project.urls]
Repository = "https://github.com/VertoOS/wasm-host"

[tool.setuptools]
packages = ["wasm_host"]
