[package]
name = "wasm-host-core"
description = "Core host runtime for browser-compatible WebAssembly execution."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
virtual-fs.workspace = true
wasmer.workspace = true
wasmer-package.workspace = true
wasmer-wasix.workspace = true
wat.workspace = true
webc.workspace = true

[dev-dependencies]
tempfile = "3.15.0"
