[package]
name = "wasm-host-fixtures"
description = "Generated WebC fixtures for wasm-host tests and examples."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
ciborium = "0.2.2"
serde_json.workspace = true
sha2 = "0.10.8"
wat.workspace = true
webc.workspace = true
