[package]
name = "wasm-host-runner"
description = "Native runner for browser-compatible WebAssembly host testing."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[[bin]]
name = "wasm-host-runner"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
tokio.workspace = true
wasm-host-core.workspace = true

[dev-dependencies]
base64.workspace = true
tempfile = "3.15.0"
wasm-host-fixtures.workspace = true
